# adversarial_noise

./: .gitignore  README.md  requirements.txt  setup.cfg
adversarial_noise/: __init__.py  demo.py  noise.py
adversarial_noise.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demo/: demo.py  demo_utils.py
tests/: placeholder.py
