[metadata]
name = adversarial_noise
version = 0.1.0
description = Adversarial noise generation, PDG and FGSM supported
author = Mattia Gaggi
author_email = youremail@example.com  # Add your email here
url = https://github.com/yourusername/adversarial_noise  # Replace with your repository URL
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.18.0
    pandas>=1.0.0
    requests>=2.22.0
    tensorflow>=2.4.0
    torch>=1.7.0
    scikit-learn>=0.24.0
python_requires = >=3.6

[options.packages.find]
exclude =
    tests