[metadata]
name = adversarial_noise
version = 0.1.0
description = Adversarial noise generation, PDG and FGSM supported
author = Mattia Gaggi
author_email = youremail@example.com  # Add your email here
url = https://github.com/yourusername/adversarial_noise  # Replace with your repository URL
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    matplotlib==3.9.1
    requests==2.32.3
    numpy==2.0.0
    pillow==10.4.0
    torch==2.3.1
    torchvision==0.18.1

python_requires = >=3.11

[options.packages.find]
exclude =
    tests
    demo
